<resources>
    <string name="app_name">StatusOS</string>
    <string name="comecar">Começar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numero_da_os">Número da OS:</string>
    <string name="CPF">CPF:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="iniciar">iniciar</string>
    <string name="status_da_os">Status da OS</string>
    <string name="descricao">Descrição</string>
    <string name="n_os_historico">Nº OS.: %s</string>
    <string name="nome_do_cliente_historico">Nome do cliente</string>
    <string name="historico_empresa_n_s">Nome da empresa</string>
    <string name="historico_tipo_de_servi_o_n_s">Tipo de serviço</string>
    <string name="hist_rico">Histórico</string>
    <string name="sem_conexao">Sem conexão com servidor</string>
    <string name="ok">ok</string>
    <string name="aguardando_inicio">Aguardando Início</string>
    <string name="aguardando_material">Aguardando Material</string>
    <string name="em_desenvolvimento">Em desenvolvimento</string>
    <string name="aguardando_liberacao">Aguardando Material</string>
    <string name="aguardando_retirada">Aguardando Retirada</string>
    <string name="problemas_atualizacao">Problemas durante a atualização</string>
    <string name="problemas_atualizacao_descricao">Não foi possível atualizar o status dessa OS. Tente novamente mais tarde</string>
</resources>
