<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConsultarOS">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="377dp"
        android:layout_height="216dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_statusos_preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEdtOS"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_consultarOS_edtNumOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_da_os"
            android:textSize="22sp"
            android:maxLength="14"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEdtCPFCliente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="@id/inputEdtOS"
        app:layout_constraintRight_toRightOf="@id/inputEdtOS"
        app:layout_constraintTop_toBottomOf="@id/inputEdtOS">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_consultarOS_edtCPFCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CPF"
            android:maxLength="14"
            android:textAlignment="center"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="@id/inputEdtOS"
        app:layout_constraintRight_toRightOf="@id/inputEdtCPFCliente"
        app:layout_constraintTop_toBottomOf="@id/inputEdtCPFCliente"
        />

</androidx.constraintlayout.widget.ConstraintLayout>