<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/icone_finalizado"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/iniciar"
                    android:src="@drawable/ic_cheked"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/icone_em_Andamento"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/iniciar"
                    android:src="@drawable/ic_settings"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/icone_iniciar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/iniciar"
                    android:src="@drawable/ic_play"
                    android:visibility="visible"
                    tools:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status_os_Enum_iniciar_atendimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/status_da_os"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@id/icone_iniciar"
                    app:layout_constraintLeft_toRightOf="@id/icone_iniciar"
                    app:layout_constraintTop_toTopOf="@id/icone_iniciar"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status_os_Descricao_iniciar_atendimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="108dp"
                    android:text="@string/descricao"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/status_os_Enum_iniciar_atendimento"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>


    </android.widget.ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>